@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Ensure the database is saved to where it was created
     #545, make sure if shake is killed, it kills its children
 0.2.9
     Require unordered-containers 2.1 or higher, fixes bugs
